# test_project_ui

./: README.md  conftest.py  pyproject.toml
enums/: enum_endpoints.py  error_messages_enum.py
helpers/: generators.py  helper_methods.py
locators/: locators.py
pages/: base_page.py  checkbox_page.py  textbox_page.py
tests/: test_checkboxes.py  test_textboxes.py
