[tool.poetry]
name = "test-project-ui"
version = "0.1.0"
description = "Testing project for UI"
authors = ["Inga Makarova"]
license = "MIA"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"

[tool.black]
color = true
line-length = 120


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
